--- a/public/css/stock.css
+++ b/public/css/stock.css
@@ -1,19 +1,45 @@
-.section-title{
-    margin-top: 85px;
-    height: 400px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.section-title {
+  margin-top: 85px;
+  height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.section-title h1{
-    font-family: 'Teko',Helvetica,Arial,Lucida,sans-serif;
-    text-transform: uppercase;
-    font-size: 5.5rem;
-    letter-spacing: 2px;
-    line-height: 0.9em;
+.section-title h1 {
+  font-family: 'Teko', Helvetica, Arial, Lucida, sans-serif;
+  text-transform: uppercase;
+  font-size: 5.5rem;
+  letter-spacing: 2px;
+  line-height: 0.9em;
 }
 
-.card{
-    max-height: 370px;
+.card {
+  max-height: 370px;
+  max-width: fit-content;
+}
+
+
+.carousel-control-prev {
+  width: 40px;
+  background-color: rgb(70, 70, 70);
+}
+
+.carousel-control-prev-icon {
+  color: black;
+}
+
+.carousel-control-next {
+  background-color: rgb(70, 70, 70);
+  width: 40px;
+}
+
+.carousel-control-next-icon {
+  color: black;
+}
+
+/* Estilos para quitar el subrayado de los enlaces dentro de las cartas */
+.card-container a.link {
+  text-decoration: none;
+  color: inherit;
 }
