--- a/views/stock.ejs
+++ b/views/stock.ejs
@@ -2,83 +2,92 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" media="screen and (max-width:768px)" href="/css/mobile.css">
-    <link rel="icon" href="/img/logoDeltha.ico">
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"></script>
-    <!-- Link CSS JS -->
-    <link rel="stylesheet" href="/css/generalStyles.css">
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/stock.css">
-    <title>Deltha Car´s</title>
-  
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
-  
-    <!-- Jquery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  </head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" media="screen and (max-width:768px)" href="/css/mobile.css">
+  <link rel="icon" href="/img/logoDeltha.ico">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+  <!-- Link CSS JS -->
+  <link rel="stylesheet" href="/css/generalStyles.css">
+  <link rel="stylesheet" href="/css/stock.css">
+  <title>Deltha Car´s</title>
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
+
+  <!-- Jquery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+</head>
 
 <body>
 
 
-    <!-- Nav -->
-    <%- include('./shared/nav.ejs') %>
+  <!-- Nav -->
+  <%- include('./shared/nav.ejs') %>
 
     <!-- Automoviles -->
     <section class="section-title">
-        <div class="header-container text-center">
-            <h1>
-                STOCK DELTACARS
-            </h1>
-        </div>
+      <div class="header-container text-center">
+        <h1>
+          STOCK DELTACARS
+        </h1>
+      </div>
     </section>
+
     <!-- Esta es la seccion que renderiza los automoviles -->
-    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+    <div class="container">
+      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <% for (let i = 0; i < automoviles.length; i+=3) { %>
+          <% for (let i=0; i < automoviles.length; i+=3) { %>
             <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
               <div class="container">
                 <div class="card-container row">
-                  <% for (let j = i; j < i+3 && j < automoviles.length; j++) { %>
-                    <div class="col-12 col-sm-6 col-md-4 d-flex align-items-center justify-content-center">
-                      <div class="card" style="width: 18rem; margin-bottom: 20px;">
-                        <img src="<%= automoviles[j].imagen %>" class="card-img-top" alt="<%= automoviles[j].nombre %>">
-                        <div class="card-body">
-                          <h5 class="card-title"><%= automoviles[j].nombre %></h5>
-                          <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Año: <%= automoviles[j].anio %></li>
-                            <li class="list-group-item">Marca: <%= automoviles[j].marca %></li>
-                          </ul>
+                  <% for (let j=i; j < i+3 && j < automoviles.length; j++) { %>
+                    <div class="col-12 col-md-4 d-flex align-items-center justify-content-center">
+                      <a class="link" href="/renderCar/<%= automoviles[j].id %>">
+                        <div class="card" style="width: 18rem; margin-bottom: 20px;">
+                          <img src="<%= automoviles[j].imagen %>" class="card-img-top"
+                            alt="<%= automoviles[j].nombre %>">
+                          <div class="card-body">
+                            <h5 class="card-title">
+                              <%= automoviles[j].nombre %>
+                            </h5>
+                            <ul class="list-group list-group-flush">
+                              <li class="list-group-item">Año: <%= automoviles[j].anio %>
+                              </li>
+                              <li class="list-group-item">Marca: <%= automoviles[j].marca %>
+                              </li>
+                            </ul>
+                          </div>
                         </div>
-                      </div>
+                      </a>
                     </div>
-                  <% } %>
+                    <% } %>
                 </div>
               </div>
             </div>
-          <% } %>
+            <% } %>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+        <button class="carousel-control-prev control-btn" type="button" data-bs-target="#carouselExampleAutoplaying"
+          data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon control-btn" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      
-      
+    </div>
 
 
 
@@ -86,221 +95,80 @@
 
 
 
-    <div class="">
+
+    <section class="mt-5">
+      <div class="container">
         <ul class="nav nav-tabs" id="myTabs">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#tab1">Tab 1</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#tab2">Tab 2</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#tab3">Tab 3</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#tab4">Tab 4</a>
-            </li>
-
+          <li><a class="nav-link active" aria-current="page" href="#tab1P">Abrazaderas</a></li>
+          <li><a class="nav-link" href="#tab2P">Alternadores</a></li>
+          <li><a class="nav-link" href="#tab3P">Arranques</a></li>
+          <li><a class="nav-link" href="#tab4P">Bobinas</a></li>
+          <li><a class="nav-link" href="#tab5P">Bombilleras Led</a></li>
+          <li><a class="nav-link" href="#tab6P">Bujias</a></li>
+          <li><a class="nav-link" href="#tab7P">Cintas Led</a></li>
+          <li><a class="nav-link" href="#tab8P">Conectores</a></li>
+          <li><a class="nav-link" href="#tab9P">Correa Accesorios</a></li>
+          <li><a class="nav-link" href="#tab10P">Correa Repartición</a></li>
+          <li><a class="nav-link" href="#tab11P">Elevadores Relay V12</a></li>
+          <li><a class="nav-link" href="#tab12P">Embolo</a></li>
+          <li><a class="nav-link" href="#tab13P">Filtros Gasolina</a></li>
+          <li><a class="nav-link" href="#tab14P">Filtros Aire</a></li>
+          <li><a class="nav-link" href="#tab15P">Inyectores</a></li>
+          <li><a class="nav-link" href="#tab16P">Liquido Frenos</a></li>
+          <li><a class="nav-link" href="#tab17P">Mangueras</a></li>
+          <li><a class="nav-link" href="#tab18P">Patin Kit Repartición</a></li>
+          <li><a class="nav-link" href="#tab19P">Pines</a></li>
+          <li><a class="nav-link" href="#tab20P">Porta Escobillas</a></li>
+          <li><a class="nav-link" href="#tab21P">Retenedores</a></li>
+          <li><a class="nav-link" href="#tab22P">Sensores</a></li>
+          <li><a class="nav-link" href="#tab23P">Tacometro</a></li>
+          <li><a class="nav-link" href="#tab24P">Terminales</a></li>
+          <li><a class="nav-link" href="#tab25P">Tornilleria Cilindrica</a></li>
+          <li><a class="nav-link" href="#tab26P">Varios</a></li>
+          <li><a class="nav-link" href="#tab27P">Vendix</a></li>
+          <li><a class="nav-link" href="#tab28P">Wasa</a></li>
         </ul>
 
         <div class="tab-content">
-            <div class="tab-pane fade show active" id="tab1">
-                <!-- Contenido para la pestaña 1 -->
-                <p>Este es el contenido de la pestaña 1.</p>
+          <% for (let i=1; i <=28; i++) { %>
+            <div class="tab-pane fade <%= i === 1 ? 'show active' : '' %>" id="tab<%= i %>P">
+              <!-- Contenido para la pestaña <%= i %> -->
+              <p>Este es el contenido de la pestaña <%= i %> con el nombre correspondiente.</p>
             </div>
-            <div class="tab-pane fade" id="tab2">
-                <!-- Contenido para la pestaña 2 -->
-                <p>Este es el contenido de la pestaña 2.</p>
-            </div>
-            <div class="tab-pane fade" id="tab3">
-                <!-- Contenido para la pestaña 3 -->
-                <p>Este es el contenido de la pestaña 3.</p>
-            </div>
-            <div class="tab-pane fade" id="tab4">
-                <!-- Contenido para la pestaña 3 -->
-                <p>Este es el contenido de la pestaña 4.</p>
-            </div>
+            <% } %>
         </div>
-    </div>
+      </div>
+    </section>
+
 
     <!-- Prodcutos -->
 
-    <div class="btn-group dropend">
-        <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropend
-        </button>
-        <ul class="dropdown-menu">
-            <!-- Dropdown menu links -->
-            <li><a class="dropdown-item" href="#tab1P">Abrazaderas</a></li>
-            <li><a class="dropdown-item" href="#tab2P">Alternadores</a></li>
-            <li><a class="dropdown-item" href="#tab3P">Arranques</a></li>
-            <li><a class="dropdown-item" href="#tab4P">Bobinas</a></li>
-            <li><a class="dropdown-item" href="#tab5P">Bombilleras Led</a></li>
-            <li><a class="dropdown-item" href="#tab6P">Bujias</a></li>
-            <li><a class="dropdown-item" href="#tab7P">Cintas Led</a></li>
-            <li><a class="dropdown-item" href="#tab8P">Conectores</a></li>
-            <li><a class="dropdown-item" href="#tab9P">Correa Accesorios</a></li>
-            <li><a class="dropdown-item" href="#tab10P">Correa Repartición</a></li>
-            <li><a class="dropdown-item" href="#tab11p">Elevadores Relay V12</a></li>
-            <li><a class="dropdown-item" href="#tab12P">Embolo</a></li>
-            <li><a class="dropdown-item" href="#tab13P">Filtros Gasolina</a></li>
-            <li><a class="dropdown-item" href="#tab14P">Filtros Aire</a></li>
-            <li><a class="dropdown-item" href="#tab15P">Inyectores</a></li>
-            <li><a class="dropdown-item" href="#tab16P">Liquido Frenos</a></li>
-            <li><a class="dropdown-item" href="#tab17P">Mangueras</a></li>
-            <li><a class="dropdown-item" href="#tab18P">Patin Kit Repartición</a></li>
-            <li><a class="dropdown-item" href="#tab19P">Pines</a></li>
-            <li><a class="dropdown-item" href="#tab20P">Porta Escobillas</a></li>
-            <li><a class="dropdown-item" href="#tab21P">Retenedores</a></li>
-            <li><a class="dropdown-item" href="#tab22P">Sensores</a></li>
-            <li><a class="dropdown-item" href="#tab23P">Tacometro</a></li>
-            <li><a class="dropdown-item" href="#tab24P">Terminales</a></li>
-            <li><a class="dropdown-item" href="#tab25P">Tornilleria Cilindrica</a></li>
-            <li><a class="dropdown-item" href="#tab26P">Varios</a></li>
-            <li><a class="dropdown-item" href="#tab27P">Vendix</a></li>
-            <li><a class="dropdown-item" href="#tab28P">Wasa</a></li>
-        </ul>
-    </div>
-
-
-
-    <div class="tab-content">
-        <div class="tab-pane fade show active" id="tab1P">
-            <!-- Contenido para la pestaña 1 -->
-            <p>Este es el contenido de la pestaña 1.</p>
-        </div>
-        <div class="tab-pane fade" id="tab2P">
-            <!-- Contenido para la pestaña 2 -->
-            <p>Este es el contenido de la pestaña 2.</p>
-        </div>
-        <div class="tab-pane fade" id="tab3P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 3.</p>
-        </div>
-        <div class="tab-pane fade" id="tab4P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab5P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab6P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab7P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab8P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab9P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab10P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab11P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab12P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab13P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab14P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab15P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab16P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab17P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab18P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab19P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab20P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab21P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab22P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab23P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab24P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab25P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab26P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-        <div class="tab-pane fade" id="tab27P">
-            <!-- Contenido para la pestaña 3 -->
-            <p>Este es el contenido de la pestaña 4.</p>
-        </div>
-    </div>
-
     <%- include('./shared/footer.ejs') %>
-    
 
 
 
-    <script>
+
+      <script>
         $(document).ready(function () {
-            $('#myTabs a').click(function (e) {
-                e.preventDefault();
-                $(this).tab('show');
-            });
+          $('#myTabs a').click(function (e) {
+            e.preventDefault();
+            $(this).tab('show');
+          });
         });
-    </script>
+      </script>
 
-    <script>
+      <script>
         $(document).ready(function () {
-            $('.dropdown-item').click(function () {
-                var targetTabId = $(this).attr('href');
-                $('.tab-content .tab-pane').removeClass('show active');
-                $(targetTabId).addClass('show active');
-            });
+          $('.dropdown-item').click(function () {
+            var targetTabId = $(this).attr('href');
+            $('.tab-content .tab-pane').removeClass('show active');
+            $(targetTabId).addClass('show active');
+          });
         });
-    </script>
+      </script>
 
-    <!-- Bootstrap JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+      <!-- Bootstrap JavaScript -->
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
